--- a/jamesstyle.css
+++ b/jamesstyle.css
@@ -16,7 +16,7 @@ body {
 /*********** Navbar ***********/
 
 .navbar-inverse {
-    background-image: linear-gradient(to right top, rgba(0, 0, 0, 10), rgba(0, 0, 50, 10));
+    background-image: linear-gradient(to right top, rgba(0, 0, 0, 10), rgba(100, 100, 100, 10));
 }
 
 .navbar-inverse .navbar-nav>li>a {
@@ -223,7 +223,7 @@ footer #footer-above {
 
 footer h3 {
     margin-bottom: 30px;
-    color: #000;
+    color: #fff;
     font-size: 2em;
 }
 
@@ -257,7 +257,7 @@ footer h3 {
 
 .button {
     color: #fff;
-    border: solid 2px #000;
+    border: solid 2px #fff;
     border-radius: 70%;
     display: inline-block;
     width: 50px;
